--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
   margin: 0;
   padding: 20px;
 }
-@media(max-width: 1300px) {
+@media(orientation: portrait) {
   #grid {
     display: block;
   }
